--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -20,6 +20,13 @@
     right: 0;
     z-index: -1;
 }
+.about-left img{
+    width: 380px;
+    height: 550px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
 .about-sections{
     display: flex;
     gap: 80px;
