--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,7 +5,12 @@
     justify-content: center;
     gap: 80px;
     margin: 80px 170px;
+
 }
+#contact {
+  scroll-margin-top: 120px;
+}
+
 .contact-title{
     position: relative;
 }
