--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -24,14 +24,18 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 40px;
+    grid-auto-rows: 320px;
+    
 }
 .mywork-container img{
-    box-sizing: border-box;
-    width: 419pp;
-    height: 280px;
+    width: 100%;
+    height: 320px;
+    object-fit: cover;;
+    border-radius: 12px;
     transition: 0.3s;
     cursor: pointer;
 }
+
 .mywork-container img:hover{
     transform: scale(1.10);
     border: 4px solid #ff00ff;
@@ -72,10 +76,12 @@
     .mywork-container{
         grid-template-columns: 1fr 1fr;
         gap: 30px;
+        grid-auto-rows: 200px;
     }
     .mywork-container img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
     .mywork-showmore{
         padding: 20px 40px;
